# CloudLine2Plane

./: .gitignore  CMakeLists.txt  package.xml
config/: hdl64_real.yaml
include/: cloud_projection.h  common.h  line_clustering.h  line_extraction.h  line_feature.h  plane_extraction.h  projection_params.h  save_result.h  segcomp_loader.h
launch/: cl2p_kitti.launch  vlp16_nsh.launch
rviz_cfg/: lineclustering.rviz  vlp16.rviz
scripts/: script_realistic.sh  script_realistic_ptx.sh
src/: cloudline2plane_kitti.cpp  cloudline2plane_proj.cpp  line_clustering.cpp  line_extraction.cpp  line_feature.cpp  plane_extraction.cpp
